--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <section id="top-container" class="container-fluid mt-5 pt-3">
   <h1 id="main-title" class="text-center">Encontre o emprego dos seus sonhos</h1>
   <p id="main-subtitle" class="text-center">Somos o site com mais vagas de tecnologia no mercado</p>
-  <form id="search-form" class="row justify-content-center" action="">
+  <form id="search-form" class="row justify-content-center" action="/" method="GET">
     <div class="col-md-8">
       <input type="text" class="form-control" id="job" name="job" placeholder="Digite a vaga que deseja">
     </div>
@@ -15,20 +15,24 @@
   <div id="jobs-container" class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 id="job-list-title"> Veja nossas vagas em destaques</h2>
+        {{#if search}}
+          <h2 id="job-list-title"> Buscando vagas que contem: {{search}}</h2>
+        {{else}}
+          <h2 id="job-list-title"> Veja nossas vagas em destaques</h2>
+        {{/if}}
         <ul id="job-list" class="list-group">
           {{#each jobs}}
-              <li class="list-group-item {{#if new_job}}new-job{{/if}}">
-                <img src="/assets/company-logo.png" alt="Company">
-                <p>{{company}}</p>
-                <h2>{{title}}</h2>
-                <p>{{salary}}</p>
-                {{#if new_job}}
+            <li class="list-group-item {{#if new_job}}new-job{{/if}}">
+              <img src="/assets/argencia.dev.webp" alt="Company">
+              <p>{{company}}</p>
+              <h2>{{title}}</h2>
+              <p>R${{salary}}</p>
+              {{#if new_job}}
                 <span class="new-job-label">Nova</span>
-                {{/if}}
-                <a href="/jobs/{{id}}" class="btn btn-primary">Ver vaga</a>
-              </li>
-          {{/each}}        
+              {{/if}}
+              <a href="/jobs/view/{{id}}" class="btn btn-primary">Ver vaga</a>
+            </li>
+          {{/each}}
         </ul>
       </div>
     </div>
