--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,21 +16,21 @@
     <div class="row">
       <div class="col-md-12">
         {{#if search}}
-          <h2 id="job-list-title"> Buscando vagas que contem: {{search}}</h2>
+          <h2 id="job-list-title"> Buscando vagas que contêm: {{search}}</h2>
         {{else}}
-          <h2 id="job-list-title"> Veja nossas vagas em destaques</h2>
+          <h2 id="job-list-title"> Veja nossas vagas em destaque</h2>
         {{/if}}
         <ul id="job-list" class="list-group">
           {{#each jobs}}
-            <li class="list-group-item {{#if new_job}}new-job{{/if}}">
-              <img src="/assets/argencia.dev.webp" alt="Company">
-              <p>{{company}}</p>
-              <h2>{{title}}</h2>
-              <p>R${{salary}}</p>
-              {{#if new_job}}
+            <li class="list-group-item {{#if this.dataValues.new_job}}new-job{{/if}}">
+              <img src="/assets/argencia.dev.webp" alt="{{this.dataValues.company}}">
+              <p>{{this.dataValues.company}}</p>              
+              <h2>{{this.dataValues.title}}</h2>
+              <p>R${{this.dataValues.salary}}</p>
+              {{#if this.dataValues.new_job}}
                 <span class="new-job-label">Nova</span>
               {{/if}}
-              <a href="/jobs/view/{{id}}" class="btn btn-primary">Ver vaga</a>
+              <a href="/jobs/view/{{this.dataValues.id}}" class="btn btn-primary">Ver vaga</a>
             </li>
           {{/each}}
         </ul>
@@ -38,3 +38,4 @@
     </div>
   </div>
 </main>
+
