--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,25 +9,25 @@
 </head>
 <body>
   <header class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">SHCore</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Ver Vagas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-primary" href="/jobs/add">Abrir Vagas</a>
-            </li>
-          </ul>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">SHCore</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto text-center">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Ver Vagas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-primary" href="/jobs/add">Abrir Vagas</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
   {{{body}}}
   <!-- Rodapé -->
   <footer class="bg-light text-center text-lg-start">
