--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -4,21 +4,21 @@
       <a class="back-link main-color" href="/">Voltar</a>
     </div>
     <div id="img-container" class="col-12 text-center">
-      <img src="/assets/argencia.dev.webp" alt="Company">
+      <img src="/assets/argencia.dev.webp" alt="{{job.company}}">
     </div>
     <div class="col-12">
-      <h1 class="main-color text-center">{{job.dataValues.title}}</h1>
+      <h1 class="main-color text-center">{{job.title}}</h1>
       <p class="bold text-center">Quem eles estão buscando</p>
-      <p class="job-desc text-center">{{job.dataValues.description}}</p>
-      <p class="text-center"><span class="bold">O salário informado é de:</span> R${{job.dataValues.salary}}</p>
+      <p class="job-desc text-center">{{job.description}}</p>
+      <p class="text-center"><span class="bold">O salário informado é de:</span> R${{job.salary}}</p>
       <p class="text-center">
         Para trabalhar na 
         <span class="bold main-color">
-          {{job.dataValues.company}}
+          {{job.company}}
         </span> 
         envie seu e-mail para a 
-        <a href="mailto:{{job.dataValues.email}}">
-          {{job.dataValues.email}}
+        <a href="mailto:{{job.email}}">
+          {{job.email}}
         </a>
       </p>
     </div>
